force-app/main/default/objects/Activity/fields/Account_Development_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Development_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Development Plan</label>
    <referenceTo>Account_Development_Plan__c</referenceTo>
    <relationshipLabel>ADP Review Activities</relationshipLabel>
    <relationshipName>ADP_Review_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>