force-app/main/default/objects/Activity/fields/Action_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Action_Minutes__c</fullName>
    <description>Action Minutes to be sent to prospect</description>
    <inlineHelpText>Please confirm that Action Minutes from Appointment have to sent to customer</inlineHelpText>
    <label>Action Minutes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>