force-app/main/default/objects/Activity/fields/ADP_Review_Name__c.field-meta.xml
<CustomField>
    <fullName>ADP_Review_Name__c</fullName>
    <label>ADP Review Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>