force-app/main/default/objects/Activity/fields/ADP_Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>ADP_Review_Notes__c</fullName>
    <label>ADP Review Notes</label>
    <type>TextArea</type>
</CustomField>