force-app/main/default/objects/Activity/fields/Appointment_Quality__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Quality__c</fullName>
    <description>Rate the quality of the Appointment Sat, 1 being poor upto 5 being very good</description>
    <inlineHelpText>1= Poor/uncontactable, 2= Ok but Not Ready, 3 = Good/Opportunity</inlineHelpText>
    <label>Appointment Quality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>