force-app/main/default/objects/Activity/fields/Feedback_of_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Feedback_of_Appointment__c</fullName>
    <description>Feedback of Appointment attended</description>
    <inlineHelpText>Feedback of Appointment attended</inlineHelpText>
    <label>Feedback of Appointment</label>
    <type>TextArea</type>
</CustomField>