force-app/main/default/objects/Activity/fields/Quote_to_be_Provided__c.field-meta.xml
<CustomField>
    <fullName>Quote_to_be_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Quotation to be provided to customer?</description>
    <inlineHelpText>Is Quotation to be provided to customer? check for &apos;True&apos; (quote to be provided), unchecked for &apos;False&apos; (no quotation to be sent).</inlineHelpText>
    <label>Quote to be Provided</label>
    <type>Checkbox</type>
</CustomField>