force-app/main/default/objects/Activity/fields/Task_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Task_Outcome__c</fullName>
    <description>Outcome of the Task</description>
    <inlineHelpText>Outcome of the Task</inlineHelpText>
    <label>Task Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Voicemail</fullName>
            </value>
            <value>
                <fullName>Contacted Decision Maker</fullName>
            </value>
            <value>
                <fullName>Decision Maker not available</fullName>
            </value>
            <value>
                <fullName>Chased opportunity</fullName>
            </value>
            <value>
                <fullName>Booked Appointment</fullName>
            </value>
            <value>
                <fullName>Quoted opportunity</fullName>
            </value>
            <value>
                <fullName>Provided budgetary pricing</fullName>
            </value>
            <value>
                <fullName>Lead disqualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>