force-app/main/default/objects/Activity/listViews/activities__TodaysTasks.listView-meta.xml
<ListView>
    <fullName>activities__TodaysTasks</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACTIVITY.TASK</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>TASK.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>TASK.DUE_DATE</field>
        <operation>lessThan</operation>
        <value>TOMORROW</value>
    </filters>
    <label>Today&apos;s Tasks</label>
</ListView>