force-app/main/default/objects/Activity/listViews/Appointment_Opportunity_call_Sales.listView-meta.xml
<ListView>
    <fullName>Appointment_Opportunity_call_Sales</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.TYPE</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TASK.STATUS</field>
        <operation>equals</operation>
        <value>Not Started,In Progress</value>
    </filters>
    <filters>
        <field>TASK.TYPE</field>
        <operation>notEqual</operation>
        <value>Cleanse</value>
    </filters>
    <label>Appointment &amp; Opportunity calls Sales</label>
</ListView>