force-app/main/default/objects/Activity/listViews/cleanse_call_Sales.listView-meta.xml
<ListView>
    <fullName>cleanse_call_Sales</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.TYPE</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>Task_Outcome__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TASK.STATUS</field>
        <operation>equals</operation>
        <value>Not Started,In Progress</value>
    </filters>
    <filters>
        <field>TASK.TYPE</field>
        <operation>equals</operation>
        <value>Call,Cleanse,Other</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>notContain</operation>
        <value>jdigwa</value>
    </filters>
    <label>cleanse call Sales</label>
</ListView>