force-app/main/default/objects/Activity/listViews/ed_activites_calls.listView-meta.xml
<ListView>
    <fullName>ed_activites_calls</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.TYPE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Ed</value>
    </filters>
    <filters>
        <field>TASK.STATUS</field>
        <operation>notContain</operation>
        <value>Appointment Cancelled,Completed</value>
    </filters>
    <label>Ed activites and calls</label>
</ListView>