force-app/main/default/objects/Activity/listViews/Giganet_calls.listView-meta.xml
<ListView>
    <fullName>Giganet_calls</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Jag</value>
    </filters>
    <filters>
        <field>TASK.TYPE</field>
        <operation>contains</operation>
        <value>cleanse</value>
    </filters>
    <filters>
        <field>TASK.STATUS</field>
        <operation>notContain</operation>
        <value>Appointment Cancelled,Completed</value>
    </filters>
    <label>Giganet calls</label>
</ListView>