force-app/main/default/objects/Activity/listViews/Jag_cleanse_normal.listView-meta.xml
<ListView>
    <fullName>Jag_cleanse_normal</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.TYPE</columns>
    <columns>TASK.STATUS</columns>
    <columns>Task_Outcome__c</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TASK.PRIORITY</field>
        <operation>equals</operation>
        <value>Normal</value>
    </filters>
    <filters>
        <field>TASK.TYPE</field>
        <operation>equals</operation>
        <value>Cleanse,Call</value>
    </filters>
    <filters>
        <field>TASK.STATUS</field>
        <operation>contains</operation>
        <value>Not Started,In Progress</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>jdigwa</value>
    </filters>
    <label>Jag Normal Priority cleanse calls</label>
</ListView>