force-app/main/default/objects/Activity/listViews/Jag_High_priority_appointment_calls.listView-meta.xml
<ListView>
    <fullName>Jag_High_priority_appointment_calls</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.TYPE</columns>
    <columns>TASK.STATUS</columns>
    <columns>Task_Outcome__c</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TASK.PRIORITY</field>
        <operation>equals</operation>
        <value>High</value>
    </filters>
    <filters>
        <field>TASK.TYPE</field>
        <operation>equals</operation>
        <value>Appointment,Call,Cleanse,Opportunity,E-mail Campaign</value>
    </filters>
    <filters>
        <field>TASK.STATUS</field>
        <operation>contains</operation>
        <value>Not Started,In Progress</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Jag</value>
    </filters>
    <label>Jag High priority app Cleanse &amp; Opp</label>
</ListView>