force-app/main/default/objects/Activity/listViews/Jag_Low_Priority_Cleanse_calls.listView-meta.xml
<ListView>
    <fullName>Jag_Low_Priority_Cleanse_calls</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.TYPE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TASK.PRIORITY</field>
        <operation>equals</operation>
        <value>Low</value>
    </filters>
    <filters>
        <field>TASK.TYPE</field>
        <operation>contains</operation>
        <value>Call,Cleanse</value>
    </filters>
    <filters>
        <field>TASK.STATUS</field>
        <operation>contains</operation>
        <value>Not Started,In Progress,Waiting on someone else</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Jag</value>
    </filters>
    <label>Jag Low Priority Cleanse calls</label>
</ListView>